--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -393,18 +393,18 @@
                 </div>
                 <div class="modal-body">
                     <p>Give related search details</p>
-                   <form method="POST" enctype="multipart/form-data" action="/uploading" novalidate>
+                   <form method="POST" enctype="multipart/form-data" action="/" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Title</label>
-                                <input type="text" class="form-control" ng-model="title" ng-required="requried" placeholder="Title" id="title" required data-validation-required-message="Please enter your title.">
+                                <input type="text" class="form-control" placeholder="Title" id="title" name="title">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Description</label>
-                                <textarea rows="3" type="password" class="form-control" ng-model="description" ng-required="requried" placeholder="Description" id="description" required data-validation-required-message="Please enter your description."></textarea>
+                                <textarea rows="3" type="password" class="form-control" placeholder="Description" id="description" name="description"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
